# iCELL

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  APP_SETUP.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: __init__.py  app.py  requirements.txt
backend/api/: routes.py  schemas.py
backend/services/: icell_service.py
config/: README.md  config.schema.json  config.template.json  schema.json
config/plate_type/: 12_well.json  1536_well.json  24_well.json  384_well.json  48_well.json  6_well.json  96_well.json  README.md  custom_5x24.json
data/examples/simple_seeding/: README.md  config.json
data/examples/with_dye/: README.md  config.json
data/templates/: README.md  cell_layout_template.csv  meta_dye_template.csv
docs/: architecture.md  dependencies.md  examples.md  repo-structure.md
frontend/: .env.example  .eslintrc.cjs  DEVELOPER.md  ORGANIZATION.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CSVUploader.tsx  PlateVisualization.tsx  ProtocolDetailCard.tsx  ProtocolSection.tsx  ResultsDisplay.tsx  ViewModeSwitch.tsx
frontend/src/components/inputs/: NumberInput.tsx  ViewModeSwitch.tsx
frontend/src/components/plate/: PlateLegend.tsx  PlateVisualization.tsx
frontend/src/components/primitives/: DetailCardHeader.tsx  FormattedVolume.tsx  MetricRow.tsx  PlateNavigationChip.tsx  Unit.tsx  index.ts
frontend/src/components/protocol/: ProtocolDetailCard.tsx  ProtocolSection.tsx  protocolTypes.ts
frontend/src/pages/: DesignPage.tsx  ResultsPage.tsx
frontend/src/pages/design/: AddDyeForm.tsx  CellDetailsFields.tsx  CellsModePanel.tsx  ConfigBar.tsx  ConfirmProcessModal.tsx  (+16 more)
frontend/src/services/: apiClient.ts
frontend/src/store/: plateStore.test.ts  plateStore.ts
frontend/src/styles/: App.css  CSVUploader.css  DesignerPage.css  PlateVisualization.css  ProtocolSection.css  ResultsDisplay.css  ResultsPage.css  ViewModeSwitch.css  index.css  tokens.ts
frontend/src/utils/: colorPalette.ts  csvExport.ts  exportUtils.ts  importUtils.ts  protocolInstructions.ts  wellHoverDetails.ts  wellRange.ts
notebooks/: run.ipynb
scripts/: start.sh  start_backend.sh  start_frontend.sh  stop.sh
src/icell/: __init__.py  main.py  paths.py  pipeline.py
src/icell/config/: loader.py
src/icell/io/: readers.py
src/icell/processing/: dye_mastermix.py  layout_parser.py  seeding.py  validation.py
src/icell/reporting/: _format_utils.py  export.py  file_names.py  formatted_exports.py  imeta.py  instructions.py  run_log.py
tests/: test_formatted_exports.py  test_icell_service.py  test_imeta.py  test_instructions.py  test_layout_parser.py
(+9 files in other folders)
