[project]
name = "icell"
version = "1.0.0"
description = "Cell seeding and dye planning toolkit with notebook and web app workflows"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    # Loose range for library consumers. backend/requirements.txt pins the
    # exact install version for reproducible deployment.
    "pandas>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipykernel",
]
